crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__ref_instr__cast.snap
---
source: crates/service/tests/diagnostics/typeck/ref_instr.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 4,
          "character": 4
        },
        "end": {
          "line": 4,
          "character": 20
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [(ref null func)], found [(ref null any)]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 3,
                "character": 4
              },
              "end": {
                "line": 3,
                "character": 15
              }
            }
          },
          "message": "expected type `(ref null func)`, found `(ref null any)`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 7,
          "character": 4
        },
        "end": {
          "line": 7,
          "character": 28
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [(ref null func)], found [(ref null any)]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 6,
                "character": 4
              },
              "end": {
                "line": 6,
                "character": 15
              }
            }
          },
          "message": "expected type `(ref null func)`, found `(ref null any)`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 10,
          "character": 20
        },
        "end": {
          "line": 10,
          "character": 21
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [], found [(ref null func)] at the end",
      "data": [
        191,
        258,
        [
          "(ref null func)"
        ]
      ]
    },
    {
      "range": {
        "start": {
          "line": 13,
          "character": 19
        },
        "end": {
          "line": 13,
          "character": 20
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [(ref any)], found [(ref null any)] at the end",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 13,
                "character": 4
              },
              "end": {
                "line": 13,
                "character": 19
              }
            }
          },
          "message": "expected type `(ref any)`, found `(ref null any)`"
        }
      ]
    }
  ]
}
